--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello, GitHub</h1>
 
 </body>
-
-
 
 </html>
