--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Hello, GitHub</h1>
-
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam placeat nesciunt suscipit in!</p>
 </body>
 
 </html>
